# social-media-polygraph

./: .editorconfig  .env.example  .gitignore  .guix-channel  CHANGELOG.adoc  CITATION.cff  CONTRIBUTING.md  ECOSYSTEM.scm  LICENSE  LICENSE.txt  META.scm  README.adoc  README.md  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  codemeta.json  flake.nix  guix.scm
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  security-policy.yml
.well-known/: dc.xml  security.txt
backend/: .env.example  Containerfile  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/endpoints/: auth.py  claims.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  arango.py  cache.py  xtdb_client.py
backend/app/ml/: __init__.py  credibility_scorer.py  nlp_processor.py
backend/app/models/: __init__.py  claim.py  source.py  user.py
backend/app/services/: __init__.py  claim_service.py  fact_checker.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_credibility_scorer.py  test_nlp_processor.py
frontend/: Containerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  VerificationResult.tsx
frontend/src/pages/: AboutPage.tsx  ClaimDetailPage.tsx  HomePage.tsx  VerifyPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infrastructure/podman/: .env.example  compose.yaml
